# paleonews

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  README.md  config.yaml  entry.py  paleonews.spec  pyproject.toml  sources.txt
deploy/: .env.example  Dockerfile  README.md  build.sh  deploy.sh  deploy.toml  docker-compose.yml  entrypoint.sh  preflight.sh  remote-prod.sh  sync_to_srv.sh
devlog/: 20260218_001_phase1_mvp_implementation.md  20260218_002_phase2_implementation.md  20260218_003_phase3_implementation.md  20260218_P01_paleonews_plan_draft.md  20260218_P02_phase1_implementation_plan.md  20260218_P03_phase2_implementation_plan.md  20260218_P04_phase3_implementation_plan.md  20260219_004_phase4_implementation.md  20260219_P05_phase4_multiuser_plan.md  20260317_005_llm_provider_abstraction.md  20260322_006_chatbot_webui_docker.md  20260324_007_email_webui_docker_deploy.md  20260324_P06_django_migration_plan.md  20260325_008_nginx_userdetail_channel.md  20260510_009_dockerfile_sed_bug_config_mount.md  20260510_010_feeds_table_db_migration.md  20260510_011_app_settings_overlay_model_picker.md  20260619_012_claude_subscription_billing_fix.md  20260624_013_token_renewal_native_claude_slim_image.md  20260714_014_deploy_data_contract_alignment.md  20260714_015_p06_django_migration_reevaluation.md  20260714_P07_deploy_data_contract_alignment.md
paleonews/: __main__.py  bot.py  config.py  crawler.py  db.py  fetcher.py  filter.py  llm.py  summarizer.py  web.py
scripts/: apply_claude_token.sh  backup_db.py  release.sh
tests/: test_db.py  test_fetcher.py  (+3 more)
(+21 files in other folders)
