[project]
name = "paleonews"
version = "0.2.5"
description = "Paleontology news aggregator: RSS collection, filtering, summarization, and delivery"
requires-python = ">=3.11"

dependencies = [
    "feedparser",
    "httpx",
    "anthropic",
    "openai",
    "python-telegram-bot",
    "pyyaml",
    "python-dotenv",
    "readability-lxml",
    "fastapi",
    "uvicorn",
    "jinja2",
    "python-multipart",
]

[project.scripts]
paleonews = "paleonews.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
include = ["paleonews*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
